--- a/css/demo.css
+++ b/css/demo.css
@@ -36,8 +36,6 @@ a {
 	color: #3e3e3e;
 }
 
-
-
 .clear {
 	clear: both;
 }
@@ -93,13 +91,37 @@ a {
     width: 100%;
 }
 
+.img_block {
+}
+
+.bp_block {
+}
+
+.bp_image {
+    display: inline-block;
+}
+
+.img_block img {
+    width: 30%;
+    border-radius: 5%;
+    border: 4px solid #000000;
+    margin: 70px 10px 10px 10px;
+}
+
+.bp_block img {
+    width: 55%;
+    border-radius: 100%;
+    border: 6px solid #ffffff;
+    margin: 20px 45px 5px 45px;
+}
+
 .lockedNav {
     position: fixed;
     top: 0px;
 	height: 30px;
 	z-index: 1000;
     width: 100%;
-    background: #8c001a;
+    background: rgba(0, 0, 0, 0.8);
     transition: top 0.2s ease-in-out;
 }
 
@@ -138,7 +160,7 @@ a {
 
 .subNavBtn {
 	display: inline-block;
-    width: 15%;
+    width: 13%;
 	height: 35px;
 	margin: 0px 0px 0 0;
 	text-decoration: none;
@@ -149,6 +171,7 @@ a {
 }
 
 .subNavMain {
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
 	display: inline-block;
     width: 30%;
 	height: 35px;
@@ -183,23 +206,28 @@ a {
 /* SECTIONS */
 .sTop {
 	min-height: 130px;
-	color:#fffbfc;
+	color:#ffffff;
 	height: 550px;
 }
 
 #ceremony {
-	background:#fffbfc;
+	background:#ffffff;
 	color:#080705;
 }
 
 #accommodations {
 	background: #d7dedc;
-    color: #8c001a
+    color: #8c001a;
+}
+
+#bridalparty {
+	background: #8c001a;
+    color: #ffffff;
 }
 
 #registry {
-	background: #fffbfc;
-    color: #474448
+	background: #ffffff;
+    color: #000000;
 }
 
 .reg-links a {
